# will-compile-c-for-food

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  assembly_generation.cpp  assembly_generation.h  code_emission.cpp  code_emission.h  compiler.cpp  compiler.h  driver.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  tacky.cpp  tacky.h  utils.cpp  utils.h  vcpkg.json  visitor.h
tests/: CMakeLists.txt  assembly_generation_test.cpp  lexer_test.cpp  parser_test.cpp  tacky_test.cpp
